# SeqTUI

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  README.md  readme_dev.txt
.github/workflows/: add_build_musl.yml  release.yml
docs/: TODO.md
examples/: LOC_11070.fasta  LOC_39310.fasta  profile_test.rs
src/: controller.rs  event.rs  fasta.rs  genetic_code.rs  lib.rs  main.rs  model.rs  ui.rs
src/formats/: fasta.rs  mod.rs  nexus.rs  phylip.rs
src/ui/: glyphs.rs
test_data/: alignment.fasta  unaligned.fasta
test_data/vcf_tests/: biallelic_snp.fa  snp_with_gap.fa  snp_with_n.fa  three_snps.fa  triallelic_snp.fa  two_snps_close.fa  two_snps_far.fa
