[package]
name = "seqtui"
version = "0.1.0"
edition = "2021"
authors = ["V. Ranwez"]
description = "A fast terminal-based viewer and toolkit for sequences. View, translate, convert, and concatenate — aligned or not."
license = "MIT"
readme = "README.md"

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "wrap_help"] }

# Text wrapping
textwrap = "0.16"

# Memory allocator (better memory return to OS)
tikv-jemallocator = "0.6"

[dev-dependencies]
tempfile = "3.10"
