[package]
name = "seqtui"
version = "0.1.0"
edition = "2021"
authors = ["V. Ranwez"]
description = "Fast TUI toolkit for viewing, translating, and manipulating biological sequences."
license = "MIT"
readme = "README.md"
keywords = ["terminal", "sequence", "alignment", "snp", "viewer"]
categories = ["science::bioinformatics"]
repository = "https://github.com/ranwez-search/SeqTUI/"

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "wrap_help"] }

# Random number generation (for log file names)
rand = "0.9"

# Text wrapping
textwrap = "0.16"

# Memory allocator (better memory return to OS, not relevant for Windows)
[target.'cfg(not(windows))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
